--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,7 @@ celerybeat-schedule
 # Environments
 .env
 .venv
+.envrc
 env/
 venv/
 ENV/
@@ -106,3 +107,6 @@ venv.bak/
 # IDE
 .vscode
 .idea
+
+# Docker
+db/
